components/ads_8.1/ace.hpp

//-- type declarations -------------------------------------------------------
typedef char *PAceChar;
typedef int ADSHANDLE;
typedef int *PADSHANDLE;
typedef Word *PWord;
typedef Word UNSIGNED16;
typedef unsigned UNSIGNED32;
typedef unsigned *PUNSIGNED32;
struct ADS_MGMT_COMM_STATS
{
	
public:
	double dPercentCheckSums;
	unsigned ulTotalPackets;
	unsigned ulRcvPktOutOfSeq;
	unsigned ulNotLoggedIn;
	unsigned ulRcvReqOutOfSeq;
	unsigned ulCheckSumFailures;
	unsigned ulDisconnectedUsers;
	unsigned ulPartialConnects;
	unsigned ulInvalidPackets;
	unsigned ulRecvFromErrors;
	unsigned ulSendToErrors;
} ;
typedef ADS_MGMT_COMM_STATS *pADS_MGMT_COMM_STATS;
struct ADS_MGMT_CONFIG_PARAMS
{
	
public:
	unsigned ulNumConnections;
	unsigned ulNumWorkAreas;
	unsigned ulNumTables;
	unsigned ulNumIndexes;
	unsigned ulNumLocks;
	unsigned ulUserBufferSize;
	unsigned ulStatDumpInterval;
	unsigned ulErrorLogMax;
	unsigned ulNumTPSHeaderElems;
	unsigned ulNumTPSVisibilityElems;
	unsigned ulNumTPSMemoTransElems;
	Word usNumRcvECBs;
	Word usNumSendECBs;
	Word usNumBurstPackets;
	Word usNumWorkerThreads;
	unsigned ulSortBuffSize;
	char aucErrorLog[256];
	char aucSemaphore[256];
	char aucTransaction[256];
	Byte ucReserved3;
	Byte ucReserved4;
	Word usSendIPPort;
	Word usReceiveIPPort;
	Byte ucUseIPProtocol;
	Byte ucFlushEveryUpdate;
	unsigned ulGhostTimeout;
	unsigned ulFlushFrequency;
	unsigned ulKeepAliveTimeOut;
	Byte ucDisplayNWLoginNames;
	Byte ucUseSemaphoreFiles;
	Byte ucUseDynamicAOFs;
	Byte ucUseInternet;
	Word usInternetPort;
	Word usMaxConnFailures;
	unsigned ulInternetKeepAlive;
	Word usCompressionLevel;
	Word usReserved5;
	unsigned ulReserved6;
} ;
typedef ADS_MGMT_CONFIG_PARAMS *pADS_MGMT_CONFIG_PARAMS;
struct ADS_MGMT_CONFIG_MEMORY
{
	
public:
	unsigned ulTotalConfigMem;
	unsigned ulConnectionMem;
	unsigned ulWorkAreaMem;
	unsigned ulTableMem;
	unsigned ulIndexMem;
	unsigned ulLockMem;
	unsigned ulUserBufferMem;
	unsigned ulTPSHeaderElemMem;
	unsigned ulTPSVisibilityElemMem;
	unsigned ulTPSMemoTransElemMem;
	unsigned ulRcvEcbMem;
	unsigned ulSendEcbMem;
	unsigned ulWorkerThreadMem;
} ;
typedef ADS_MGMT_CONFIG_MEMORY *pADS_MGMT_CONFIG_MEMORY;
struct ADS_MGMT_INSTALL_INFO
{
	
public:
	unsigned ulUserOption;
	char aucRegisteredOwner[36];
	char aucVersionStr[16];
	char aucInstallDate[16];
	char aucOemCharName[16];
	char aucAnsiCharName[16];
	char aucEvalExpireDate[16];
	char aucSerialNumber[16];
} ;
typedef ADS_MGMT_INSTALL_INFO *pADS_MGMT_INSTALL_INFO;
struct ADS_MGMT_ACTIVITY_INFO
{
	
public:
	unsigned ulOperations;
	unsigned ulLoggedErrors;
	ADS_MGMT_UPTIME_INFO stUpTime;
	ADS_MGMT_USAGE_INFO stUsers;
	ADS_MGMT_USAGE_INFO stConnections;
	ADS_MGMT_USAGE_INFO stWorkAreas;
	ADS_MGMT_USAGE_INFO stTables;
	ADS_MGMT_USAGE_INFO stIndexes;
	ADS_MGMT_USAGE_INFO stLocks;
	ADS_MGMT_USAGE_INFO stTpsHeaderElems;
	ADS_MGMT_USAGE_INFO stTpsVisElems;
	ADS_MGMT_USAGE_INFO stTpsMemoElems;
	ADS_MGMT_USAGE_INFO stWorkerThreads;
} ;
typedef ADS_MGMT_ACTIVITY_INFO *pADS_MGMT_ACTIVITY_INFO;
typedef ADS_MGMT_USER_INFO ADSMgUserArray[200];
typedef ADSMgUserArray *PADSMgUserArray;
typedef ADS_MGMT_TABLE_INFO ADSMgTableArray[200];
typedef ADSMgTableArray *PADSMgTableArray;
typedef ADS_MGMT_INDEX_INFO ADSMgIndexArray[200];
typedef ADSMgIndexArray *PADSMgIndexArray;
typedef ADS_MGMT_RECORD_INFO ADSMgLocksArray[400];
typedef ADSMgLocksArray *PADSMgLocksArray;
typedef ADS_MGMT_THREAD_ACTIVITY ADSMgThreadsArray[50];
typedef ADSMgThreadsArray *PADSMgThreadsArray;
extern "C" unsigned __stdcall AdsGetString(int hTable, char * pucFldName, char * pucBuf, PUNSIGNED32 pulLen, Word usOption);
extern "C" unsigned __stdcall AdsGetTableAlias(int hTable, char * pucAlias, PWord pusLen);
extern "C" unsigned __stdcall AdsGetTableCharType(int hTable, PWord pusCharType);
extern "C" unsigned __stdcall AdsGetTableConnection(int hTable, PADSHANDLE phConnect);
extern "C" unsigned __stdcall AdsGetTableFilename(int hTable, Word usOption, char * pucName, PWord pusLen);
extern "C" unsigned __stdcall AdsGetTableHandle(char * pucName, PADSHANDLE phTable);
extern "C" unsigned __stdcall AdsGetTableLockType(int hTable, PWord pusLockType);
extern "C" unsigned __stdcall AdsGetTableMemoSize(int hTable, PWord pusMemoSize);
extern "C" unsigned __stdcall AdsGetTableOpenOptions(int hTable, PUNSIGNED32 pulOptions);
extern "C" unsigned __stdcall AdsGetTableRights(int hTable, PWord pusRights);
extern "C" unsigned __stdcall AdsGetTableType(int hTable, PWord pusType);
extern "C" unsigned __stdcall AdsGetTime(int hTable, char * pucFldName, char * pucBuf, PWord pusLen);
extern "C" unsigned __stdcall AdsGetVersion(PUNSIGNED32 pulMajor, PUNSIGNED32 pulMinor, char * pucLetter, char * pucDesc, PWord pusDescLen);
extern "C" unsigned __stdcall AdsGotoBookmark(int hTable, int hBookmark);
extern "C" unsigned __stdcall AdsGotoBookmark60(int hObj, char * pucBookmark);
extern "C" unsigned __stdcall AdsGotoBottom(int hObj);
extern "C" unsigned __stdcall AdsGotoRecord(int hTable, unsigned ulRec);
extern "C" unsigned __stdcall AdsGotoTop(int hObj);
extern "C" unsigned __stdcall AdsImageToClipboard(int hTable, char * pucFldName);
extern "C" unsigned __stdcall AdsInTransaction(int hConnect, PWord pbInTrans);
extern "C" unsigned __stdcall AdsInitRawKey(int hIndex);
extern "C" unsigned __stdcall AdsIsEmpty(int hTable, char * pucFldName, PWord pbEmpty);
extern "C" unsigned __stdcall AdsIsExprValid(int hTable, char * pucExpr, PWord pbValid);
extern "C" unsigned __stdcall AdsIsFound(int hObj, PWord pbFound);
extern "C" unsigned __stdcall AdsIsIndexCompound(int hIndex, PWord pbCompound);
extern "C" unsigned __stdcall AdsIsIndexCustom(int hIndex, PWord pbCustom);
extern "C" unsigned __stdcall AdsIsIndexDescending(int hIndex, PWord pbDescending);
extern "C" unsigned __stdcall AdsIsIndexPrimaryKey(int hIndex, PWord pbPrimaryKey);
extern "C" unsigned __stdcall AdsIsIndexFTS(int hIndex, PWord pbFTS);
extern "C" unsigned __stdcall AdsIsIndexUnique(int hIndex, PWord pbUnique);
extern "C" unsigned __stdcall AdsIsRecordDeleted(int hTable, PWord pbDeleted);
extern "C" unsigned __stdcall AdsIsRecordEncrypted(int hTable, PWord pbEncrypted);
extern "C" unsigned __stdcall AdsIsRecordLocked(int hTable, unsigned ulRec, PWord pbLocked);
extern "C" unsigned __stdcall AdsIsRecordVisible(int hObj, PWord pbVisible);
extern "C" unsigned __stdcall AdsIsServerLoaded(char * pucServer, PWord pbLoaded);
extern "C" unsigned __stdcall AdsIsTableEncrypted(int hTable, PWord pbEncrypted);
extern "C" unsigned __stdcall AdsIsTableLocked(int hTable, PWord pbLocked);
extern "C" unsigned __stdcall AdsLocate(int hTable, char * pucExpr, Word bForward, PWord pbFound);
extern "C" unsigned __stdcall AdsLockRecord(int hTable, unsigned ulRec);
extern "C" unsigned __stdcall AdsLockTable(int hTable);
extern "C" unsigned __stdcall AdsLookupKey(int hIndex, char * pucKey, Word usKeyLen, Word usDataType, PWord pbFound);
extern "C" unsigned __stdcall AdsMgConnect(char * pucServerName, char * pucUserName, char * pucPassword, PADSHANDLE phMgmtHandle);
extern "C" unsigned __stdcall AdsMgDisconnect(int hConnect);
extern "C" unsigned __stdcall AdsMgDumpInternalTables(int hMgmtHandle);
extern "C" unsigned __stdcall AdsMgGetActivityInfo(int hMgmtHandle, pADS_MGMT_ACTIVITY_INFO pstActivityInfo, PWord pusStructSize);
extern "C" unsigned __stdcall AdsMgGetCommStats(int hMgmtHandle, pADS_MGMT_COMM_STATS pstCommStats, PWord pusStructSize);
extern "C" unsigned __stdcall AdsMgGetConfigInfo(int hMgmtHandle, pADS_MGMT_CONFIG_PARAMS pstConfigValues, PWord pusConfigValuesStructSize, pADS_MGMT_CONFIG_MEMORY pstConfigMemory, PWord pusConfigMemoryStructSize);
extern "C" unsigned __stdcall AdsMgGetInstallInfo(int hMgmtHandle, pADS_MGMT_INSTALL_INFO pstInstallInfo, PWord pusStructSize);
extern "C" unsigned __stdcall AdsMgGetLocks(int hMgmtHandle, char * pucTableName, char * pucUserName, Word usConnNumber, PADSMgLocksArray astRecordInfo, PWord pusArrayLen, PWord pusStructSize);
extern "C" unsigned __stdcall AdsMgGetOpenIndexes(int hMgmtHandle, char * pucTableName, char * pucUserName, Word usConnNumber, PADSMgIndexArray astOpenIndexInfo, PWord pusArrayLen, PWord pusStructSize);
extern "C" unsigned __stdcall AdsMgGetOpenTables(int hMgmtHandle, char * pucUserName, Word usConnNumber, PADSMgTableArray astOpenTableInfo, PWord pusArrayLen, PWord pusStructSize);
extern "C" unsigned __stdcall AdsMgGetServerType(int hMgmtHandle, PWord pusServerType);
extern "C" unsigned __stdcall AdsMgGetUserNames(int hMgmtHandle, char * pucFileName, PADSMgUserArray astUserInfo, PWord pusArrayLen, PWord pusStructSize);
extern "C" unsigned __stdcall AdsMgGetWorkerThreadActivity(int hMgmtHandle, PADSMgThreadsArray astThreadActivity, PWord pusArrayLen, PWord pusStructSize);
extern "C" unsigned __stdcall AdsMgResetCommStats(int hMgmtHandle);