components/ads_8.1/ace.pas


   function AdsGetString( hTable: ADSHANDLE;
                          pucFldName: PAceChar;
                          pucBuf: PAceChar;
                          pulLen: pUNSIGNED32;
                          usOption: Word ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetTableAlias( hTable: ADSHANDLE;
                              pucAlias: PAceChar;
                              pusLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetTableCharType( hTable: ADSHANDLE;
                                 pusCharType: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetTableConnection( hTable: ADSHANDLE;
                                   phConnect: pADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetTableFilename( hTable: ADSHANDLE;
                                 usOption: Word;
                                 pucName: PAceChar;
                                 pusLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetTableHandle( pucName: PAceChar;
                               phTable: pADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetTableLockType( hTable: ADSHANDLE;
                                 pusLockType: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetTableMemoSize( hTable: ADSHANDLE;
                                 pusMemoSize: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetTableOpenOptions( hTable: ADSHANDLE;
                                    pulOptions: pUNSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetTableRights( hTable: ADSHANDLE;
                               pusRights: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetTableType( hTable: ADSHANDLE;
                             pusType: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetTime( hTable: ADSHANDLE;
                        pucFldName: PAceChar;
                        pucBuf: PAceChar;
                        pusLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGetVersion( pulMajor: pUNSIGNED32;
                           pulMinor: pUNSIGNED32;
                           pucLetter: PAceChar;
                           pucDesc: PAceChar;
                           pusDescLen: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGotoBookmark( hTable: ADSHANDLE;
                             hBookmark: ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGotoBookmark60( hObj: ADSHANDLE;
                               pucBookmark: PAceChar ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGotoBottom( hObj: ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGotoRecord( hTable: ADSHANDLE;
                           ulRec: UNSIGNED32 ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsGotoTop( hObj: ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsImageToClipboard( hTable: ADSHANDLE;
                                 pucFldName: PAceChar ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsInitRawKey( hIndex: ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsInTransaction( hConnect: ADSHANDLE;
                              pbInTrans: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsIsEmpty( hTable: ADSHANDLE;
                        pucFldName: PAceChar;
                        pbEmpty: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsIsExprValid( hTable: ADSHANDLE;
                            pucExpr: PAceChar;
                            pbValid: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsIsFound( hObj: ADSHANDLE;
                        pbFound: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsIsIndexCompound( hIndex: ADSHANDLE;
                                pbCompound: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsIsIndexCustom( hIndex: ADSHANDLE;
                              pbCustom: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsIsIndexDescending( hIndex: ADSHANDLE;
                                  pbDescending: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsIsIndexPrimaryKey( hIndex: ADSHANDLE;
                                  pbPrimaryKey: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsIsIndexFTS( hIndex: ADSHANDLE;
                           pbFTS: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsIsIndexUnique( hIndex: ADSHANDLE;
                              pbUnique: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsIsRecordDeleted( hTable: ADSHANDLE;
                                pbDeleted: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsIsRecordEncrypted( hTable: ADSHANDLE;
                                  pbEncrypted: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsIsRecordLocked( hTable: ADSHANDLE;
                               ulRec: UNSIGNED32;
                               pbLocked: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsIsRecordVisible( hObj: ADSHANDLE;
                                pbVisible: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsIsServerLoaded( pucServer: PAceChar;
                               pbLoaded: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsIsTableEncrypted( hTable: ADSHANDLE;
                                 pbEncrypted: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsIsTableLocked( hTable: ADSHANDLE;
                              pbLocked: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsLocate( hTable: ADSHANDLE;
                       pucExpr: PAceChar;
                       bForward: Word;
                       pbFound: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsLockRecord( hTable:  ADSHANDLE;
                           ulRec:  UNSIGNED32 ):  UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsLockTable( hTable:  ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsLookupKey( hIndex: ADSHANDLE;
                          pucKey: PAceChar;
                          usKeyLen: Word;
                          usDataType: Word;
                          pbFound: pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}


   { begin Management APIs }
   function AdsMgConnect( pucServerName : PAceChar;
                          pucUserName : PAceChar;
                          pucPassword : PAceChar;
                          phMgmtHandle : pADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsMgDisconnect( hConnect: ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsMgDumpInternalTables( hMgmtHandle : ADSHANDLE ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsMgGetCommStats( hMgmtHandle : ADSHANDLE;
                               pstCommStats : pADS_MGMT_COMM_STATS;
                               pusStructSize : pWord ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsMgResetCommStats( hMgmtHandle : ADSHANDLE ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsMgGetConfigInfo( hMgmtHandle : ADSHANDLE;
                                pstConfigValues : pADS_MGMT_CONFIG_PARAMS;
                                pusConfigValuesStructSize : pWord;
                                pstConfigMemory : pADS_MGMT_CONFIG_MEMORY;
                                pusConfigMemoryStructSize : pWord ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsMgGetInstallInfo( hMgmtHandle : ADSHANDLE;
                                 pstInstallInfo : pADS_MGMT_INSTALL_INFO;
                                 pusStructSize : pWord ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsMgGetActivityInfo( hMgmtHandle : ADSHANDLE;
                                  pstActivityInfo : pADS_MGMT_ACTIVITY_INFO;
                                  pusStructSize : pWord ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsMgGetUserNames( hMgmtHandle : ADSHANDLE;
                               pucFileName : PAceChar;
                               astUserInfo : PADSMgUserArray;
                               pusArrayLen : pWord;
                               pusStructSize : pWord ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsMgGetOpenTables( hMgmtHandle : ADSHANDLE;
                                pucUserName : PAceChar;
                                usConnNumber : UNSIGNED16;
                                astOpenTableInfo : PADSMgTableArray;
                                pusArrayLen : pWord;
                                pusStructSize : pWord ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsMgGetOpenIndexes( hMgmtHandle : ADSHANDLE;
                                 pucTableName : PAceChar;
                                 pucUserName : PAceChar;
                                 usConnNumber : UNSIGNED16;
                                 astOpenIndexInfo : PADSMgIndexArray;
                                 pusArrayLen : pWord;
                                 pusStructSize : pWord ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsMgGetLocks( hMgmtHandle : ADSHANDLE;
                           pucTableName : PAceChar;
                           pucUserName : PAceChar;
                           usConnNumber : UNSIGNED16;
                           astRecordInfo : PADSMgLocksArray;
                           pusArrayLen : pWord;
                           pusStructSize : pWord ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsMgGetServerType( hMgmtHandle : ADSHANDLE;
                                pusServerType : pWord ): UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}

   function AdsMgGetWorkerThreadActivity( hMgmtHandle : ADSHANDLE;
                                          astThreadActivity: PADSMgThreadsArray;
                                          pusArrayLen : pWord;
                                          pusStructSize : pWord ):UNSIGNED32; {$IFDEF WIN32}stdcall;{$ENDIF}{$IFDEF LINUX}cdecl;{$ENDIF}
